[tool.poetry]
name = "wt-podcast"
version = "0.1.0"
description = ""
authors = ["Craig Weber <crgwbr@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
eyeD3 = "^0.8.10"
feedgen = "^0.7.0"
lxml = "^4.4"
pydub = "^0.23.1"
pytz = "^2019.2"
PyYAML = "^5.1.2"
requests = "^2.22.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
